[gd_scene load_steps=9 format=2]

[ext_resource path="res://addons/FontAwesome/fontawesome-webfont.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://addons/FontAwesome/FontAwesome.gd" type="Script" id=2]
[ext_resource path="res://src/Levels/BuilderLevel/BuilderView/Pallette/Pallette.gd" type="Script" id=3]
[ext_resource path="res://src/Components/WheelController/WheelController.tscn" type="PackedScene" id=4]

[sub_resource type="Animation" id=1]
resource_name = "Fade In"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("DimRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.156863, 0.156863, 0.156863, 0 ), Color( 0.156863, 0.156863, 0.156863, 0.756863 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("DimRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=2]
resource_name = "Fade_Out"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("DimRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.156863, 0.156863, 0.156863, 0.756863 ), Color( 0.156863, 0.156863, 0.156863, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("DimRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=3]
resource_name = "Start_Dim"
tracks/0/type = "value"
tracks/0/path = NodePath("DimRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.156863, 0.156863, 0.156863, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("DimRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="DynamicFont" id=4]
size = 64
font_data = ExtResource( 1 )

[node name="Pallette" type="CanvasLayer"]
layer = 0
script = ExtResource( 3 )

[node name="Dimmer" type="AnimationPlayer" parent="."]
autoplay = "Start_Dim"
"anims/Fade In" = SubResource( 1 )
anims/Fade_Out = SubResource( 2 )
anims/Start_Dim = SubResource( 3 )

[node name="DimRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0.156863, 0.156863, 0.156863, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SearchAndSelect" type="VBoxContainer" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -128.0
margin_top = -260.0
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SearchButton" type="Button" parent="SearchAndSelect"]
margin_right = 128.0
margin_bottom = 128.0
rect_min_size = Vector2( 128, 128 )
shortcut_in_tooltip = false

[node name="FontAwesomeLabel" type="Label" parent="SearchAndSelect/SearchButton"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 4 )
text = "ï€‚"
align = 1
valign = 1
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
size = 64
icon = "search"

[node name="ColorRect" type="ColorRect" parent="SearchAndSelect"]
margin_top = 132.0
margin_right = 128.0
margin_bottom = 260.0
rect_min_size = Vector2( 128, 128 )
color = Color( 0.168627, 0.168627, 0.168627, 0.666667 )

[node name="CurrentTile" type="Sprite" parent="SearchAndSelect/ColorRect"]
position = Vector2( 64, 64 )

[node name="WheelController" parent="." instance=ExtResource( 4 )]
visible = false
[connection signal="pressed" from="SearchAndSelect/SearchButton" to="." method="search_button"]
